New entries should be added at the top

2005-03-16 Fixed tick on horiz colorbar

2005-03-16 Added Japanses winreg patch - JDH

2005-03-15 backend_gtkagg.py: changed to use double buffering, this fixes
           the problem reported Joachim Berdal Haga - "Parts of plot lagging 
	   from previous frame in animation". Tested with anim.py and it makes
           no noticable difference to performance (23.7 before, 23.6 after) 
	   - SC

2005-03-14 add src/_backend_gdk.c extension to provide a substitute function
	   for pixbuf.get_pixels_array(). Currently pixbuf.get_pixels_array()
           only works with Numeric, and then only works if pygtk has been
	   compiled with Numeric support. The change provides a function
	   pixbuf_get_pixels_array() which works with Numeric and numarray and
	   is always available. It means that backend_gtk should be able to
	   display images and mathtext in all circumstances. - SC

2005-03-11 Upgraded CXX to 5.3.1

2005-03-10 remove GraphicsContextPS.set_linestyle()
	   and GraphicsContextSVG.set_linestyle() since they do no more than 
           the base class GraphicsContext.set_linestyle() - SC

2005-03-09 Refactored contour functionality into dedicated module

2005-03-09 Added Eric's contourf updates and Nadia's clabel functionality

2005-03-09 Moved colorbar to figure.Figure to expose it for API developers
          - JDH

2005-03-09 backend_cairo.py: implemented draw_markers() - SC

2005-03-09 cbook.py: only use enumerate() (the python version) if the builtin
	   version is not available.
           Add new function 'izip' which is set to itertools.izip if available
           and the python equivalent if not available. - SC

2005-03-07 backend_gdk.py: remove PIXELS_PER_INCH from points_to_pixels(), but
	   still use it to adjust font sizes. This allows the GTK version of
           line_styles.py to more closely match GTKAgg, previously the markers
           were being drawn too large. - SC
